--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@content-collections/core": "^0.12.0",
+    "@content-collections/mdx": "^0.2.2",
     "@content-collections/vite": "^0.2.7",
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.0",
