--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev --port 3000",
+    "rename": "ts-node scripts/utils.ts",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest run",
