--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev --port 3000",
-    "rename": "ts-node scripts/utils.ts",
+    "rename": "ts-node scripts/rename-md-files.ts",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest run",
@@ -18,6 +18,8 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@mantine/hooks": "^8.3.9",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-router": "^1.132.0",
@@ -31,6 +33,7 @@
     "drizzle-orm": "^0.39.0",
     "lucide-react": "^0.544.0",
     "nitro": "latest",
+    "outdent": "^0.8.0",
     "pg": "^8.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -55,6 +58,7 @@
     "dotenv": "^16.0.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
